chore: add buffersize parameter to createWriteStream
